создание тестов, проверка покрытия.